samples/_failures_safe/1761519358_0e108a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e163427.c: In function ‘main’:
./samples/SAFE/__tmp_7e163427.c:139:17: error: expected ‘;’ at end of input
  139 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_7e163427.c:139:9: error: expected declaration or statement at end of input
  139 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_7e163427.c:139:9: error: expected declaration or statement at end of input
